kubernetes/apps/prod/uptime-kuma/ingress-route.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: uptime-kuma
  namespace: uptime-kuma
spec:
  entryPoints:
    - websecure
  tls:
    secretName: uptime-kuma.${DOMAIN}
  routes:
    - kind: Rule
      match: Host(`${HOST_UPTIME_KUMA}.${DOMAIN}`)
      # middlewares:
      #   - name: x-forwarded-proto-https
      #     namespace: traefik
      services:
        - name: uptime-kuma
          kind: Service
          namespace: uptime-kuma
          port: 3001
